--- a/blog/templates/blog/recipe_confirm_delete.html
+++ b/blog/templates/blog/recipe_confirm_delete.html
@@ -1,12 +1,15 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
-        <h1>Are you sure you want to delete the recipe: "{{ recipe.title }}"?</h1>
-        <form method="post">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Yes, Delete</button>
-            <a href="{% url 'recipe_list' %}" class="btn btn-secondary">Cancel</a>
-        </form>
-    </div>
+<div class="container mt-5">
+    <h2>Confirm Delete</h2>
+    <p>Are you sure you want to delete <strong>{{ recipe.title }}</strong>?</p>
+    
+    <form method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Yes, Delete</button>
+        <a href="{% url 'recipe_detail' recipe.slug %}" class="btn btn-secondary">Cancel</a>
+    </form>
+</div>
 {% endblock %}
+
