--- a/blog/templates/blog/recipe_update.html
+++ b/blog/templates/blog/recipe_update.html
@@ -1,12 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <h2>Edit Recipe: {{ recipe.title }}</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Update Recipe</button>
-    </form>
-</div>
+    <div class="container">
+        <h1 class="mt-3">Edit Recipe: {{ form.instance.title }}</h1>
+
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            <button type="submit" class="btn btn-primary">Update Recipe</button>
+        </form>
+    </div>
 {% endblock %}
+
