--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,41 +6,30 @@
 
 <div class="container-fluid">
     <div class="row">
-
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for recipe in recipe_list %}
-                <div class="col-md-4 mb-5">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                {% if recipe.image %}
-                                <img src="{{ recipe.image.url }}" alt="Recipe Image" class="card-img-top">
-                            {% else %}
-                                <img src="{% static 'images/default.jpg' %}" alt="Default Image" class="card-img-top">
-                            {% endif %}
-                    
-                            <!-- Author below the image -->
+        {% for recipe in recipe_list %}
+        <div class="col-md-4 col-sm-6 mb-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <a href="{% url 'recipe_detail' recipe.slug %}" class="recipe-link">
+                        <h2 class="card-title">{{ recipe.title }}</h2>
+                    </a>
+                    <div class="image-container">
+                        <img src="{{ recipe.image.url }}" class="card-img-top scale" alt="{{ recipe.title }}">
+                        <div class="image-flash">
                             <p class="author">Author: {{ recipe.author }}</p>
-                    
-                            <a href="{% url 'recipe_detail' recipe.slug %}" class="recipe-link">
-                                <h2 class="card-title">{{ recipe.title }}</h2>
-                            </a>
-                            
-                            <hr />
-                            <p class="card-text h6 recipe-subtitle">{{ recipe.created_at|date:"F j, Y" }}</p>
                         </div>
                     </div>
+                    <hr />
+                    <p class="card-text h6 recipe-subtitle">{{ recipe.created_at|date:"F j, Y" }}</p>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-
             </div>
         </div>
+        {% if forloop.counter|divisibleby:3 %}
+        </div><div class="row">
+        {% endif %}
+        {% endfor %}
     </div>
+</div>
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
