--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,7 @@ body {
 .card {
     border: none;
     background-color: transparent;
+    height: 100%;
 }
 
 .card-text {
@@ -43,17 +44,18 @@ body {
     color: 	#FFFF33;
 }
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .image-container {
     position: relative;
+    margin-bottom: 10px;
 }
 
-.image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
 
-}
 
 .scale {
     width: 100%;
@@ -191,7 +193,18 @@ h2 {
 }
 
 .author {
-    font-size: 0.9rem;  
-    color: #6c757d;  
-    margin-top: 10px;  
+    color: #fff;
+    margin-top: 10px; 
+    text-transform: uppercase;
+    font-size: small;
+}
+
+.col-md-4, .col-sm-6 {
+    padding: 0 10px;
+}
+
+.card-img-top {
+    width: 100%; 
+    height: 200px;
+    object-fit: cover; 
 }
