--- a/blog/templates/blog/recipe_detail.html
+++ b/blog/templates/blog/recipe_detail.html
@@ -1,51 +1,53 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
 
-<div class="masthead">
-    <div class="container">
-        <div class="row g-0">
-            <div class="col-md-6 masthead-text">
-                <!-- Post title goes in these h1 tags -->
-                <h1 class="post-title">{{ recipe.title }}</h1>
-
-                <!-- Post author goes before the | the post's created date goes after -->
-                <p>Author: {{ recipe.author }}</p>
-                <p>{{ recipe.created_at|date:"F j, Y" }}</p>
-
-
-                <!-- Add Edit button here -->
-                {% if user.is_authenticated and user == recipe.author %}
-                    <a href="{% url 'recipe_update' recipe.slug %}" class="btn btn-warning">Update</a>
-                {% endif %}
-
-
-                <!-- Delete button -->
-                {% if user.is_authenticated and user == recipe.author %}
-                <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-danger">Delete</a>
-                {% endif %}
-
+<div class="container mt-4">
+    <div class="row">
+        <!-- Top Left: Author, Title, and Buttons -->
+        <div class="col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">{{ recipe.title }}</h2>
+                    <p class="author">By: {{ recipe.author }}</p>
+                    <p class="recipe-subtitle">{{ recipe.created_at|date:"F j, Y" }}</p>
+                    {% if user.is_authenticated and user == recipe.author %}
+                    <a href="{% url 'recipe_update' recipe.slug %}" class="btn btn-edit">Edit</a>
+                    <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-delete">Delete</a>
+                    {% endif %}
+                </div>
             </div>
-            <div class="d-none d-md-block col-md-6 masthead-image">
+        </div>
+
+        <!-- Top Right: Recipe Image -->
+        <div class="col-md-6 masthead-image">
+            <div class="image-container">
                 <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
-            <div class="card-body">
-                <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">
-                    {{ recipe.ingredients | safe }}
-                </p>
-                <p class="card-text">
-                    {{ recipe.instructions | safe }}
-                </p>
+    <!-- Bottom Section: Ingredients and Instructions -->
+    <div class="row mt-4">
+        <!-- Left Bottom: Ingredients -->
+        <div class="col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h3 class="card-title">Ingredients</h3>
+                    <p class="card-text">{{ recipe.ingredients|safe }}</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Right Bottom: How to Prepare -->
+        <div class="col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h3 class="card-title">How to Prepare</h3>
+                    <p class="card-text">{{ recipe.instructions|safe }}</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
+            
 {% endblock content %}
