--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,9 +31,9 @@ body {
 }
 
 .card {
-    border: none;
     background-color: transparent;
-    height: 100%;
+    border: none;
+ 
 }
 
 .card-text {
@@ -41,12 +41,21 @@ body {
 }
 
 .card-title {
-    color: 	#FFFF33;
+    color: #FFFF33;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .card-body {
-    flex-direction: column;
-    justify-content: space-between;
+   background-color: transparent;
+}
+
+.container {
+    margin-top: 20px;
+}
+
+.cold-md-6 {
+    margin-bottom: 20px;
 }
 
 .image-container {
@@ -79,6 +88,13 @@ body {
 .masthead-image {
     position: relative;
     overflow: hidden;
+    height: 50vh;
+}
+
+.masthead-image img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; /* Ensures the image covers the area without distortion */
 }
 
 
@@ -87,14 +103,24 @@ body {
     color: #fff
 }
 
+.recipe-detail-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centering content */
+    text-align: center;
+    margin-bottom: 20px; /* Adds space below */
+}
+
+
 .recipe-link:hover,
 .page-link {
     color: #FFC72C;
 }
 
 .recipe-title {
-    margin-top: 10%;
-    margin-left: 5%;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #FFFF33;
 }
 
 .recipe-subtitle {
@@ -102,11 +128,19 @@ body {
     color: lightgray;
 }
 
-.btn-signup,
-.btn-edit,
-.btn-delete {
-    background-color: #188181;
-    color: #fff;
+.recipe-meta {
+    display: flex;
+    justify-content: center; /* Centers content horizontally */
+    gap: 15px; /* Adds space between author & date */
+    font-size: 1rem;
+    color: #ccc;
+}
+
+.recipe-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 15px;
 }
 
 
@@ -127,9 +161,6 @@ body {
     color: rgb(172, 175, 175);
 }
 
-.approval {
-    color: rgb(222, 146, 168);
-}
 
 .navbar .nav-link,
 .navbar .navbar-brand {
