fixed css to make recipe detail more professional

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,7 +16,7 @@
                     <div class="image-container">
                         <img src="{{ recipe.image.url }}" class="card-img-top scale" alt="{{ recipe.title }}">
                         <div class="image-flash">
-                            <p class="author">Author: {{ recipe.author }}</p>
+                            <p class="author">By: {{ recipe.author }}</p>
                         </div>
                     </div>
                     <hr />
