--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,25 +37,43 @@ body {
 }
 
 .card-text {
-    color: #dbd6d6;
+    color: #fff;
 }
 
 .card-title {
     color: #FFFF33;
     font-weight: bold;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    text-align: left;
+    font-size: 1.8rem;
 }
 
 .card-body {
    background-color: transparent;
+   padding-left: 15px;
+   padding-right: 15px;
+   padding-top: 10px;
+   padding-bottom: 10px;
 }
 
 .container {
-    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 15px;  
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .cold-md-6 {
-    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.col-md-6 .card-body {
+    padding-right: 30px; /* Push everything slightly to the right */
 }
 
 .image-container {
@@ -81,7 +99,7 @@ body {
 }
 
 .masthead-text {
-    color: white;
+    color: lightgray;
     position: relative;
 }
 
@@ -93,7 +111,7 @@ body {
 
 .masthead-image img {
     width: 100%; 
-    height: 100%; 
+    height: auto; 
     object-fit: cover; /* Ensures the image covers the area without distortion */
 }
 
@@ -186,7 +204,7 @@ form select {
     background-color: #1a7341 !important;  /* Custom button color */
     color: white !important;
     border: none;
-    padding: 6px 12px;
+    padding: 10px 20px;
     border-radius: 8px;
     cursor: pointer;
     font-size: 0.9rem;
@@ -194,7 +212,7 @@ form select {
     transition: background 0.3s ease;
     width: auto;
     margin-right: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .btn:hover {
@@ -206,11 +224,19 @@ h2 {
 }
 
 .author {
-    color: #fff;
+    color: rgb(219, 213, 213);
     margin: 4px 0;
     font-size: 0.7rem;
     font-family: 'Montserrat', sans-serif; 
     font-weight: 400;
+}
+
+.author,
+.recipe-subtitle {
+    margin-bottom: 15px;
+    font-size: 0.8rem;
+    padding: 8px 15px;
+    margin-top: 10px;
 }
 
 .recipe-subtitle{
