--- a/blog/templates/blog/recipe_confirm_delete.html
+++ b/blog/templates/blog/recipe_confirm_delete.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Confirm Delete</h2>
-    <p>Are you sure you want to delete <strong>{{ recipe.title }}</strong>?</p>
+    <h2 class="delete-title">Confirm Delete</h2>
+    <p class="confirm-text">Are you sure you want to delete <strong>{{ recipe.title }}</strong>?</p>
     
     <form method="POST">
         {% csrf_token %}
