--- a/templates/base.html
+++ b/templates/base.html
@@ -98,14 +98,32 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 main-bg">
-        <p class="m-0 text-center">Made by Julia Volponi</p>
-        <p class="m-0 text-center ">Follow us:
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square ms-3"></i></a>
-            <a href="https://x.com/" target="_blank"><i class="fab fa-twitter-square ms-3"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square ms-3"></i></a>
-        </p>
+    <footer class="footer py-4 main-bg">
+        <div class="container">
+            <div class="row">
+                <!-- Sabor Brasileiro Text -->
+                <div class="col-12 text-center mb-2">
+                    <h5 class="text-green">Sabor Brasileiro</h5>
+                    <p class="text-muted mb-0">Bringing the taste of Brazil to your plate.</p>
+                </div>
+    
+                <!-- Social Media Links -->
+                <div class="col-12 text-center">
+                    <p class="m-0 text-dark">Follow us for more delicious updates:</p>
+                    <a href="https://www.facebook.com/" target="_blank" class="social-icon ms-3">
+                        <i class="fab fa-facebook-square fa-2x"></i>
+                    </a>
+                    <a href="https://x.com/" target="_blank" class="social-icon ms-3">
+                        <i class="fab fa-twitter-square fa-2x"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="social-icon ms-3">
+                        <i class="fab fa-instagram-square fa-2x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
+    
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
