--- a/blog/templates/blog/recipe_detail.html
+++ b/blog/templates/blog/recipe_detail.html
@@ -7,7 +7,7 @@
         <div class="col-md-6">
             <div class="card mb-4">
                 <div class="card-body">
-                    <h2 class="card-title">{{ recipe.title }}</h2>
+                    <h2>{{ recipe.title }}</h2>
                     <p class="author">By: {{ recipe.author }}</p>
                     <p class="recipe-subtitle">{{ recipe.created_at|date:"F j, Y" }}</p>
                     {% if user.is_authenticated and user == recipe.author %}
