--- a/blog/templates/blog/recipe_form.html
+++ b/blog/templates/blog/recipe_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="mt-3">Create a New Recipe</h1>
+        <h1 class="mt-3 card-title">Create a New Recipe</h1>
 
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
