added messagsages to confirm recipe created or error

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,15 @@
         </div>
     </nav>
 
+{% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
+
+
     <!-- Main content block -->
     <main class="flex-shrink-0">
         {% block content %}
