--- a/blog/templates/blog/recipe_form.html
+++ b/blog/templates/blog/recipe_form.html
@@ -1,15 +1,10 @@
-{% extends "base.html" %} 
+{% load static %} {% extends "base.html" %} {% block content %}
+<div class="container">
+  <h1 class="mt-3 card-title">Create a New Recipe</h1>
 
-{% load static %}
-
-{% block content %}
-    <div class="container">
-        <h1 class="mt-3 card-title">Create a New Recipe</h1>
-
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Create Recipe</button>
-        </form>
-    </div>
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %} {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Create Recipe</button>
+  </form>
+</div>
 {% endblock %}
