--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <head>
     <title>{% block title %}Sabor Brasileiro{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" />
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,7 +34,7 @@
 <body class="d-flex flex-column h-100 ">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg" role="navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'recipe_list' %}">
                 <span class="brand">Sa<span class="red-o">bo</span>r<span class="thin">Brasileiro</span></span>
