moved extend base in front of load static to fix error

--- a/blog/templates/blog/recipe_update.html
+++ b/blog/templates/blog/recipe_update.html
@@ -1,4 +1,4 @@
-{% load static %} {% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <div class="container mt-4">
   <h1 class="mb-4 custom-title">Edit Recipe: {{ form.instance.title }}</h1>
