--- a/blog/templates/blog/recipe_form.html
+++ b/blog/templates/blog/recipe_form.html
@@ -1,4 +1,4 @@
-{% load static %} {% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container">
   <h1 class="mt-3 card-title">Create a New Recipe</h1>
 
